*）完成登录界面和第一个业务模块的展示框架

--- a/src/module/DEMO/my-demo/module.conf
+++ b/src/module/DEMO/my-demo/module.conf
@@ -1,5 +1,5 @@
 {
-	"title": "My Demo"
-	"plugin": "sys-plugin",
-	"class": "SysMainWindow"
+	"title": "My Demo",
+	"plugin": "sysplugin",
+	"class": "SysUserMgt"
 }
