*）优化代码，修复脚本执行时this指针问题

--- a/src/module/DEMO/my-main/module.conf
+++ b/src/module/DEMO/my-main/module.conf
@@ -1,5 +1,47 @@
 {
 	"title": "My Demo",
 	"plugin": "sysplugin",
-	"class": "SysMainWindow"
+	"class": "SysMainWindow",
+	"desktop": [
+		{
+			"type": "menu",
+			"text": "A",
+			"icon": 14,
+			"item": [
+				{
+					"type": "module",
+					"text": "A1",
+					"icon": 15,
+					"url": ""
+				},
+				{
+					"type": "module",
+					"text": "A2",
+					"icon": 16,
+					"url": ""
+				}
+			]
+		},
+		{
+			"type": "module",
+			"text": "B1",
+			"icon": 17,
+			"url": "my-demo"
+		},
+		{
+			"type": "module",
+			"text": "C1",
+			"icon": 18,
+			"url": ""
+		},
+		{
+			"type": "strech"
+		},
+		{
+			"type": "module",
+			"text": "C1",
+			"icon": 19,
+			"url": ""
+		}
+	]
 }
