*）优化登录界面和模块代码

--- a/src/module/DEMO/my-demo/uim.conf
+++ b/src/module/DEMO/my-demo/uim.conf
@@ -1,5 +1,5 @@
 {
-	"MainToolBar": [
+	"TOOLBAR": [
 		{"type": "toolitem", "action": "first_action"},
 		{"type": "toolitem", "action": "second_action"}
 	]
