--- a/src/module/DEMO/my-main/module.conf
+++ b/src/module/DEMO/my-main/module.conf
@@ -4,19 +4,28 @@
 	"class": "SysMainWindow",
 	"desktop": [
 		{
+			"type": "module",
+			"text": "My Demo",
+			"icon": 17,
+			"url": "my-demo"
+		},
+		{
+			"type": "strech"
+		},
+		{
 			"type": "menu",
-			"text": "A",
-			"icon": 14,
+			"text": "",
+			"icon": 19,
 			"item": [
 				{
 					"type": "module",
-					"text": "A1",
+					"text": "",
 					"icon": 15,
 					"url": ""
 				},
 				{
 					"type": "module",
-					"text": "A2",
+					"text": "",
 					"icon": 16,
 					"url": ""
 				}
@@ -24,23 +33,8 @@
 		},
 		{
 			"type": "module",
-			"text": "B1",
-			"icon": 17,
-			"url": "my-demo"
-		},
-		{
-			"type": "module",
 			"text": "C1",
-			"icon": 18,
-			"url": ""
-		},
-		{
-			"type": "strech"
-		},
-		{
-			"type": "module",
-			"text": "C1",
-			"icon": 19,
+			"icon": 14,
 			"url": ""
 		}
 	]
