*）添加测试模块，优化代码

--- a/src/module/DEMO/my-main/module.conf
+++ b/src/module/DEMO/my-main/module.conf
@@ -13,9 +13,21 @@
 			"type": "strech"
 		},
 		{
+			"type": "module",
+			"text": "My Demo2",
+			"icon": 19,
+			"url": "my-demo-2"
+		},
+		{
+			"type": "module",
+			"text": "My Demo3",
+			"icon": 14,
+			"url": "my-demo-3"
+		},
+		{
 			"type": "menu",
 			"text": "",
-			"icon": 19,
+			"icon": 21,
 			"item": [
 				{
 					"type": "module",
@@ -30,12 +42,6 @@
 					"url": ""
 				}
 			]
-		},
-		{
-			"type": "module",
-			"text": "C1",
-			"icon": 14,
-			"url": ""
 		}
 	]
 }
