--- a/src/module/DEMO/my-main/module.conf
+++ b/src/module/DEMO/my-main/module.conf
@@ -26,20 +26,33 @@
 		},
 		{
 			"type": "menu",
-			"text": "",
+			"text": "menu 1",
 			"icon": 21,
 			"item": [
 				{
 					"type": "module",
-					"text": "",
+					"text": "My Demo1",
 					"icon": 15,
-					"url": ""
+					"url": "my-demo"
 				},
 				{
 					"type": "module",
-					"text": "",
+					"text": "My Demo2",
 					"icon": 16,
-					"url": ""
+					"url": "my-demo-2"
+				}
+			]
+		},
+		{
+			"type": "menu",
+			"text": "menu 2",
+			"icon": 22,
+			"item": [
+				{
+					"type": "module",
+					"text": "My Demo3",
+					"icon": 15,
+					"url": "my-demo-3"
 				}
 			]
 		}
